--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "email": "shmoop207@gmail.com"
   },
   "engines": {
-    "node": ">= 8.4.x",
-    "npm": ">= 5.3.x"
+    "node": ">= 12.x.x",
+    "npm": ">= 6.x.x"
   },
   "scripts": {
     "test": "mocha test --exit"
   },
   "main": "./index.js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -28,27 +28,25 @@
   "readme": "",
   "readmeFilename": "README.md",
   "dependencies": {
-    "@types/uuid": "^3.4.4",
-    "appolo-event-dispatcher": "^6.0.8",
-    "lodash": "^4.17.11",
-    "uuid": "^3.3.2"
+    "appolo-event-dispatcher": "^7.0.0",
+    "appolo-utils": "^0.0.50"
   },
   "devDependencies": {
     "@types/benchmark": "^1.0.31",
-    "@types/bluebird": "^3.5.24",
-    "@types/chai": "^4.1.6",
-    "@types/lodash": "^4.14.116",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.3",
-    "@types/sinon": "^7.0.11",
-    "@types/sinon-chai": "^3.2.2",
+    "@types/bluebird": "^3.5.30",
+    "@types/chai": "^4.2.11",
+    "@types/lodash": "^4.14.149",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.5",
+    "@types/sinon": "^7.5.2",
+    "@types/sinon-chai": "^3.2.3",
     "benchmark": "^2.1.4",
-    "bluebird": "^3.5.2",
+    "bluebird": "^3.7.2",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.3.0",
-    "tslib": "^1.9.3",
-    "typescript": "^3.1.1"
+    "mocha": "^7.1.1",
+    "sinon": "^9.0.1",
+    "sinon-chai": "^3.5.0",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   }
 }
