--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "mocha test --exit"
   },
   "main": "./index.js",
-  "version": "1.0.4",
+  "version": "8.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -28,25 +28,25 @@
   "readme": "",
   "readmeFilename": "README.md",
   "dependencies": {
-    "appolo-event-dispatcher": "^7.0.0",
-    "appolo-utils": "^0.0.50"
+    "@appolo/events": "^8.0.2",
+    "@appolo/utils": "^8.0.3"
   },
   "devDependencies": {
-    "@types/benchmark": "^1.0.31",
-    "@types/bluebird": "^3.5.30",
-    "@types/chai": "^4.2.11",
-    "@types/lodash": "^4.14.149",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.5",
-    "@types/sinon": "^7.5.2",
-    "@types/sinon-chai": "^3.2.3",
+    "@types/benchmark": "^2.1.0",
+    "@types/bluebird": "^3.5.33",
+    "@types/chai": "^4.2.14",
+    "@types/lodash": "^4.14.164",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.14.6",
+    "@types/sinon": "^9.0.8",
+    "@types/sinon-chai": "^3.2.5",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "sinon": "^9.0.1",
+    "mocha": "^8.2.1",
+    "sinon": "^9.2.1",
     "sinon-chai": "^3.5.0",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.5"
   }
 }
